[gd_scene load_steps=3 format=3 uid="uid://b6atpedb4f3ly"]

[ext_resource type="Script" uid="uid://c2nelaxad2h5s" path="res://component/leaderboard_ui/leaderboard_ui.gd" id="1_2c47y"]
[ext_resource type="Theme" uid="uid://dv4gsrkxdjvk" path="res://component/leaderboard_ui/leaderboard_theme.tres" id="2_h4rqk"]

[node name="Panel" type="Panel"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0
theme = ExtResource("2_h4rqk")
script = ExtResource("1_2c47y")

[node name="sideButton" type="TextureButton" parent="."]
z_index = 3
layout_mode = 2
offset_left = 156.0
offset_top = -421.0
offset_right = 206.0
offset_bottom = -371.0

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="FetchTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = -700.0
offset_right = 170.0
offset_bottom = -60.0
theme = ExtResource("2_h4rqk")

[node name="EntriesContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
